<resources>
    <string name="app_name">Hello-Visio</string>
    <string name="connect_btn">Connect</string>
    <string name="hangup_button">Hangup button</string>

    <string name="logo">Logo</string>
    <string name="mute_microphone">Mute microphone</string>
    <string name="no_account">Vous n\'avez pas de compte ?<b> Inscrivez-vous</b></string>
    <string name="servers_prompt">Choose a server</string>
    <string-array name="servers_arrays">
        <item>https://cloud.apizee.com</item>
    </string-array>
    <string name="tutorials_prompt">DefaultRoom</string>
    <string-array name="tutorials_arrays">
        <item>Tuto 1 - Video conference</item>
        <item>Tuto 2 - Group Chat and transfer</item>
        <item>Tuto 3 - Peer to peer chat</item>
        <item>Tuto 4 - Peer to peer send data</item>
        <item>Tuto 5 - Presence group management</item>
        <item>Tuto 6 - User data sharing</item>
        <item>Tuto 7 - Peer to peer send file</item>
        <item>Peer to peer call</item>
    </string-array>

    <string name="lobbyHelp">The other party can open this same application with the same room.</string>
    <string name="conference_room">Conference room</string>
    <string name="lobbyRoom">DefaultRoom</string>
</resources>
